<resources>
    <string name="app_name">Kids First</string>
    <string name="kids_first">Kids First</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ingat_saya">Ingat saya</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="atau_daftar_dengan">atau daftar dengan</string>
    <string name="sudah_mempunyai_akun">Sudah mempunyai akun?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artikel">Artikel</string>
    <string name="cari_artikel">Cari artikel</string>
    <string name="untuk_anda">Untuk Anda</string>
    <string name="kehamilan">Kehamilan</string>
    <string name="following">Following</string>
    <string name="silahkan_isi_nama_anda">Silahkan isi nama anda</string>
    <string name="silahkan_isi_email_anda">Silahkan isi email anda</string>
    <string name="silahkan_gunakan_email_yang_valid">Silahkan gunakan email yang valid</string>
    <string name="silahkan_isi_kata_sandi_anda">Silahkan isi kata sandi anda</string>
    <string name="silahkan_isi_kata_sandi_minimal_8_karakter">Silahkan isi kata sandi minimal 8 karakter</string>
    <string name="silahkan_isi_konfirmasi_kata_sandi">Silahkan isi konfirmasi kata sandi</string>
    <string name="silahkan_isi_konfirmasi_kata_sandi_minimal_8_karakter">Silahkan isi konfirmasi kata sandi minimal 8 karakter</string>
    <string name="kata_sandi_dan_konfirmasi_tidak_sama">Kata sandi dan Konfirmasi tidak sama</string>
    <string name="error">Error</string>
    <string name="default_text">-</string>
    <string name="sedang_proses">Sedang Proses...</string>
    <string name="sukses">Sukses</string>
    <string name="selamat_akun_anda_berhasil_dibuat">Selamat akun anda berhasil dibuat</string>
    <string name="online">ONLINE</string>
    <string name="sp_kandungan_dan_kebidanan">Sp. Kandungan dan Kebidanan</string>
    <string name="_129">129</string>
    <string name="rp_49_000">Rp 49.000</string>
    <string name="rp_50_000">Rp 50.000</string>
    <string name="diskon2023">DISKON2023</string>
    <string name="bidang_keahlian">Bidang Keahlian</string>
    <string name="keluarga_berencana">Keluarga Berencana</string>
    <string name="penyakit_kelamin">Penyakit Kelamin</string>
    <string name="kesehatan_kandungan">Kesehatan Kandungan</string>
    <string name="program_hamil">Program Hamil</string>
    <string name="chat">Chat</string>
    <string name="profil_dokter">Profil Dokter</string>
    <string name="cari_dokter_kandungan">Cari Dokter Kandungan</string>
    <string name="cari_dokter">Cari Dokter</string>
    <string name="keluarga_berencana_kehaliman_resiko_tinggi">Keluarga Berencana, Kehaliman Resiko Tinggi</string>
    <string name="anakku">Anakku</string>
    <string name="trisemester_pertama">Trisemester pertama</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="_10_minggu_4_hari">10 minggu 4 hari</string>
    <string name="konsultasi_dengan_dokter">Konsultasi dengan Dokter</string>
    <string name="forum_diskusi">Forum Diskusi</string>
    <string name="perkembangan_janin_dan_bumil">Perkembangan Janin dan Bumil</string>
    <string name="rekomendasi_dokter_kandungan">Rekomendasi Dokter Kandungan</string>
    <string name="pilihan_dokter_terbaik_untuk_anda">Pilihan dokter terbaik untuk anda</string>
    <string name="artikel_untuk_anda">Artikel untuk Anda</string>
    <string name="pilihan_artikel_terbaik_untuk_anda">Pilihan artikel terbaik untuk anda</string>
    <string name="filter_berdasarkan">Filter Berdasarkan</string>
    <string name="pengalaman">Pengalaman</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="harga">Harga</string>
    <string name="profil">Profil</string>
    <string name="email_clarissa">clarissa@mail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="hapus_akun_desc">Anda akan memulai proses penghapusan akun. Akun Anda tidak lagi dapat dilihat di Aplikasi Kids First. Masukkan kembali kata sandi Kids First Anda untuk menghapus akun Anda.</string>
    <string name="alumnus">Alumnus</string>
    <string name="stanford_university_2020">Stanford University, 2020</string>
    <string name="universitas_brawijaya_2012">Universitas Brawijaya, 2012</string>
    <string name="praktik_di">Praktik di</string>
    <string name="rumah_sakit_elizabeth_bandung_jawa_barat">Rumah Sakit Elizabeth, Bandung, Jawa Barat</string>
    <string name="rumah_sakit_fatimah_jakarta_dki_jakarta">Rumah Sakit Fatimah, Jakarta, DKI Jakarta</string>
    <string name="nomor_str">Nomor STR</string>
    <string name="_71113012181333574">71113012181333574</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="title_activity_edit_profil">EditProfilActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Edit">Edit Profile</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="masukkan_nama_anda_yang_baru">Masukkan nama anda yang baru</string>
    <string name="selamat_profil_anda_berhasil_diubah">Selamat profil anda berhasil diubah</string>
    <string name="gagal_melakukan_edit_profile_silahkan_kembali_ke_halaman_profil_dan_mencoba_ulang">Gagal melakukan edit profile, silahkan kembali ke halaman profil dan mencoba ulang</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran</string>
    <string name="biaya_sesi_60_menit">Biaya Sesi 60 menit</string>
    <string name="voucher_diskon">Voucher Diskon</string>
    <string name="rp_1_000">-Rp 1.000</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="beli_paket_konsultasi">Beli Paket Konsultasi</string>
    <string name="hemat_hingga_26">Hemat hingga 26%</string>
    <string name="kamu_hemat_rp1_000">Kamu hemat Rp1.000</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="bayar">Bayar</string>
    <string name="pembayaranmu">Pembayaranmu</string>
    <string name="pesan">Pesan</string>
    <string name="lupa_passoword">Lupa Password</string>
    <string name="dr_david">Dr. David</string>
    <string name="message">Message</string>
    <string name="ketuk_untuk_mengganti_foto">Ketuk untuk mengganti foto</string>
    <string name="selamat_nama_anda_berhasil_di_update">Selamat, nama anda berhasil di update</string>

</resources>