<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.editprofil.EditProfilActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/small_50"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_close_edit_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_keyboard_backspace_24"
            android:layout_marginStart="@dimen/normal_100"
            app:tint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Edit"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/normal_125"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/image_90"
            android:layout_height="@dimen/image_90"
            app:cardCornerRadius="@dimen/image_90"
            android:elevation="0dp"
            android:layout_marginTop="@dimen/small_100"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_person_24"
                android:scaleType="centerCrop"
                android:elevation="0dp"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ketuk_untuk_mengganti_foto"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/small_100"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_nama_anda_yang_baru"
            android:textColor="@color/black"
            android:textSize="@dimen/body_2"
            android:layout_marginTop="@dimen/normal_125"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text"
            android:layout_marginTop="@dimen/small_100"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/et_nama_baru"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/nama_lengkap"
                android:inputType="text"
                android:paddingHorizontal="@dimen/normal_100"
                android:textColorHint="@color/text_color_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_edit_profil"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_primary"
            android:layout_marginTop="@dimen/normal_125"
            android:background="@drawable/bg_btn_auth_color_primary"
            android:text="@string/edit_profile"
            android:textColor="@color/white" />


    </LinearLayout>
</LinearLayout>

