<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.ProfileFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/small_50"
        android:gravity="center">

        <TextView
            android:id="@+id/custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

    </androidx.appcompat.widget.Toolbar>
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user"
        android:layout_width="@dimen/image_90"
        android:layout_height="@dimen/image_90"
        tools:src="@tools:sample/avatars"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/normal_175"/>

    <TextView
        android:id="@+id/tv_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/full_names"
        android:textSize="@dimen/h6"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/normal_100"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_75">

        <ImageView
            android:layout_width="@dimen/normal_125"
            android:layout_height="@dimen/normal_100"
            android:src="@drawable/baseline_mail_outline_24"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/small_100"/>

        <TextView
            android:id="@+id/tv_email_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/email_clarissa"
            android:textSize="@dimen/body_2"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/normal_100">

        <LinearLayout
            android:id="@+id/btn_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_auth_color_primary"
            android:padding="@dimen/normal_75"
            android:layout_marginEnd="@dimen/small_100">

            <ImageView
                android:layout_width="@dimen/normal_150"
                android:layout_height="@dimen/normal_150"
                android:src="@drawable/chat"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_another"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_auth_color_primary"
            android:padding="@dimen/normal_75"
            android:layout_marginStart="@dimen/small_100">

            <ImageView
                android:layout_width="@dimen/normal_150"
                android:layout_height="@dimen/normal_150"
                android:src="@drawable/baseline_more_horiz_24"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_card_calon_anak"
        app:layout_constraintTop_toBottomOf="@+id/tv_hai_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_150"
        android:layout_marginStart="@dimen/normal_150"
        android:layout_marginEnd="@dimen/normal_150"
        app:cardCornerRadius="@dimen/normal_150">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_gradient"
            android:padding="@dimen/normal_125">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anakku"
                    android:textColor="@color/white"
                    android:textSize="@dimen/body_2"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trisemester_pertama"
                    android:textColor="@color/white"
                    android:textSize="@dimen/caption"
                    android:layout_marginTop="@dimen/normal_75"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progess"
                    android:layout_marginTop="@dimen/small_100"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_minggu_4_hari"
                    android:textColor="@color/white"
                    android:textSize="@dimen/caption"
                    android:layout_marginTop="@dimen/normal_75"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/image_border_height"
                    android:layout_height="@dimen/image_border_height"
                    android:src="@drawable/baby_circle"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:layout_width="@dimen/large_200"
                    android:layout_height="@dimen/normal_125"
                    android:text="@string/lihat_detail"
                    android:background="@drawable/bg_btn_soft_color"
                    android:textSize="@dimen/small_text"
                    android:padding="@dimen/small_50"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/normal_100"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_150"
        android:layout_marginEnd="@dimen/normal_150"
        android:layout_marginTop="@dimen/normal_175">

        <LinearLayout
            android:id="@+id/btn_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/small_100"
            android:background="@drawable/bg_btn_auth_color_primary"
            android:gravity="center_horizontal"
            android:padding="@dimen/normal_75">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_edit_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="@dimen/body_1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/small_100"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/small_100"
            android:background="@drawable/bg_btn_auth_primary_color_soft"
            android:gravity="center_horizontal"
            android:padding="@dimen/normal_75">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_logout_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="@dimen/body_1"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="@dimen/small_100"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_hapus_akun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_150"
        android:layout_marginEnd="@dimen/normal_150"
        android:background="@drawable/bg_btn_auth_color_primary"
        android:gravity="center_horizontal"
        android:padding="@dimen/normal_75"
        android:layout_marginTop="@dimen/normal_75">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_delete_24"
            android:layout_marginEnd="@dimen/small_100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hapus_akun"
            android:textSize="@dimen/body_1"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </LinearLayout>
    




</LinearLayout>