<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_125">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_card"
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/normal_75">
                <ImageView
                    android:id="@+id/iv_dokter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:src="@tools:sample/avatars"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_card"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/normal_100">

            <TextView
                android:id="@+id/tv_nama_dokter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/full_names"
                android:textSize="@dimen/body_1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/caption"
                android:text="@string/sp_kandungan_dan_kebidanan"
                android:layout_marginTop="@dimen/small_50"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keluarga_berencana_kehaliman_resiko_tinggi"
                android:textSize="@dimen/caption"
                android:maxLines="1"
                android:ellipsize="end" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimarySoft"
                app:cardCornerRadius="@dimen/normal_100"
                android:elevation="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/normal_100">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="@dimen/small_50"
                    android:paddingHorizontal="@dimen/normal_100"
                    android:elevation="0dp">
                    <ImageView
                        android:layout_width="@dimen/normal_100"
                        android:layout_height="@dimen/normal_100"
                        android:src="@drawable/like"
                        android:layout_gravity="center_vertical"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_129"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/small_50"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="bottom">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rp_49_000"
                            android:textSize="@dimen/body_2"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="@dimen/small_100"/>
                        <ImageView
                            android:layout_width="@dimen/normal_125"
                            android:layout_height="@dimen/normal_125"
                            android:src="@drawable/discount"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_harga_asal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_50_000"
                        android:textSize="@dimen/body_2"
                        android:layout_marginEnd="@dimen/small_100" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom|end">

                    <Button
                        android:layout_width="@dimen/large_225"
                        android:layout_height="@dimen/normal_175"
                        android:background="@drawable/bg_btn_auth_color_primary"
                        android:text="@string/chat"
                        android:textSize="@dimen/caption"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_lines"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/et_search_main"
        />
</LinearLayout>